// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Company service [DELETE] /companies/:id Should delete job offer 1`] = `
{
  "avatarUrl": null,
  "backgroundUrl": null,
  "description": null,
  "id": Any<String>,
  "name": "Google",
  "ownerId": Any<String>,
  "phoneNumber": "222 222 2222",
}
`;

exports[`Company service [GET] /comapnies/:id/job-offers Should return list of company's job offers 1`] = `
{
  "company": {
    "avatarUrl": null,
    "backgroundUrl": null,
    "description": null,
    "id": Any<String>,
    "name": "Google",
    "ownerId": Any<String>,
    "phoneNumber": "222 222 2222",
  },
  "companyId": Any<String>,
  "createdAt": Any<String>,
  "description": "",
  "employmentType": "b2b",
  "id": Any<String>,
  "level": "senior",
  "position": "Senior Web Developer",
  "published": true,
  "salaryCurrency": "pln",
  "salaryFrom": 25000,
  "salaryTo": 30000,
  "workType": "full_time",
}
`;

exports[`Company service [GET] /companies Return list of Adam's companies 1`] = `
{
  "avatarUrl": null,
  "backgroundUrl": null,
  "description": null,
  "id": Any<String>,
  "name": "Google",
  "phoneNumber": "222 222 2222",
}
`;

exports[`Company service [GET] /companies/:id Return company, when user have access to it 1`] = `
{
  "avatarUrl": null,
  "backgroundUrl": null,
  "description": null,
  "id": Any<String>,
  "name": "Google",
  "phoneNumber": "222 222 2222",
}
`;

exports[`Company service [GET] /companies/:id/recruitments Should return list of company's recruitments 1`] = `
{
  "createdAt": "2024-05-05T10:48:16.458Z",
  "id": Any<String>,
  "jobOffer": {
    "position": "Senior Web Developer",
  },
  "open": true,
  "user": {
    "avatar": null,
    "firstName": "Jon",
    "id": Any<String>,
    "lastName": "Snow",
    "username": null,
  },
}
`;

exports[`Company service [POST] /comapnies/:id/job-offers Should create new job offer 1`] = `
{
  "companyId": Any<String>,
  "createdAt": Any<String>,
  "description": "We are looking for talented AI Engeneer",
  "employmentType": "internship",
  "id": Any<String>,
  "level": "junior",
  "position": "Junior AI Engeneer",
  "published": false,
  "salaryCurrency": "pln",
  "salaryFrom": 6000,
  "salaryTo": 8000,
  "workType": "part_time",
}
`;

exports[`Company service [PUT] /companies/:id Should update company 1`] = `
{
  "avatarUrl": null,
  "backgroundUrl": null,
  "description": "This is Google Inc. after update",
  "id": Any<String>,
  "name": "Google Inc.",
  "phoneNumber": "222 222 2222",
}
`;
